--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.720 2012/11/08 15:08:24 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.721 2012/11/08 15:10:23 blueness Exp $
+
+*hardened-sources-3.6.6 (08 Nov 2012)
+
+  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.6.6.ebuild:
+  vanilla-3.6.6 + genpatches-3.6-8 + grsecurity-2.9.1-3.6.6-201211072001
 
 *hardened-sources-3.2.33-r1 (08 Nov 2012)
 
