--- a/dev-db/postgresql-docs/ChangeLog
+++ b/dev-db/postgresql-docs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql-docs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.171 2012/09/25 16:23:50 titanofold Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.172 2012/11/08 15:28:39 blueness Exp $
+
+  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  postgresql-docs-8.3.21.ebuild:
+  stable arm ppc ppc64, bug #441144
 
   25 Sep 2012; <titan@gentoo.org> -postgresql-docs-8.3.18.ebuild,
   -postgresql-docs-8.3.19.ebuild, -postgresql-docs-8.4.11.ebuild,
