--- a/dev-db/postgresql-base/ChangeLog
+++ b/dev-db/postgresql-base/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql-base
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.205 2012/11/08 15:32:26 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.206 2012/11/08 15:34:58 blueness Exp $
+
+  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  postgresql-base-9.0.10.ebuild:
+  stable arm ppc ppc64, bug #441144
 
   08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   postgresql-base-8.4.14.ebuild:
