--- a/dev-db/postgresql-server/ChangeLog
+++ b/dev-db/postgresql-server/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql-server
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.217 2012/11/08 15:33:19 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.218 2012/11/08 15:35:50 blueness Exp $
+
+  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  postgresql-server-9.0.10.ebuild:
+  stable arm ppc ppc64, bug #441144
 
   08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   postgresql-server-8.4.14.ebuild:
