--- a/dev-libs/icu/ChangeLog
+++ b/dev-libs/icu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/icu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.216 2012/11/08 13:54:54 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.217 2012/11/08 15:49:43 scarabeus Exp $
+
+  08 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> icu-50.1.ebuild:
+  The unicode license left us.
 
 *icu-50.1 (08 Nov 2012)
 
