--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7120 2012/11/08 06:58:34 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7121 2012/11/08 16:08:34 vostorga Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  08 Nov 2012; Víctor Ostorga <vostorga@gentoo.org> thirdpartymirrors:
+  Updating samba mirrors list
 
   08 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
   Mask avr-libc together with the other crossdev packages.
