--- a/dev-python/pyxdg/ChangeLog
+++ b/dev-python/pyxdg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyxdg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxdg/ChangeLog,v 1.99 2012/11/12 04:29:51 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxdg/ChangeLog,v 1.100 2012/11/12 04:32:21 radhermit Exp $
+
+  12 Nov 2012; Tim Harder <radhermit@gentoo.org> -pyxdg-0.19.ebuild:
+  Remove old.
 
 *pyxdg-0.24 (12 Nov 2012)
 
