--- a/x11-drivers/xf86-video-intel/ChangeLog
+++ b/x11-drivers/xf86-video-intel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-intel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.110 2012/11/12 07:13:34 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.111 2012/11/12 07:16:10 remi Exp $
+
+  12 Nov 2012; Rémi Cardona <remi@gentoo.org> -xf86-video-intel-2.20.8.ebuild,
+  -xf86-video-intel-2.20.9.ebuild:
+  Prune older 2.20.x revisions.
 
 *xf86-video-intel-2.20.13 (12 Nov 2012)
 
