--- a/sci-libs/umfpack/ChangeLog
+++ b/sci-libs/umfpack/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/umfpack
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.32 2012/11/12 02:25:21 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.33 2012/11/12 11:16:05 jlec Exp $
+
+  12 Nov 2012; Justin Lecher <jlec@gentoo.org> umfpack-5.6.1.ebuild,
+  metadata.xml:
+  Fix deps
 
 *umfpack-5.6.1 (12 Nov 2012)
 
