--- a/app-accessibility/at-spi2-core/ChangeLog
+++ b/app-accessibility/at-spi2-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/at-spi2-core
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.19 2012/10/28 10:55:32 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.20 2012/11/12 12:31:01 blueness Exp $
+
+  12 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  at-spi2-core-2.4.2.ebuild:
+  keyword ~ppc, bug #441692
 
 *at-spi2-core-2.6.1 (28 Oct 2012)
 
