--- a/app-accessibility/at-spi2-atk/ChangeLog
+++ b/app-accessibility/at-spi2-atk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/at-spi2-atk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-atk/ChangeLog,v 1.11 2012/10/28 10:51:34 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-atk/ChangeLog,v 1.12 2012/11/12 12:33:40 blueness Exp $
+
+  12 Nov 2012; Anthony G. Basile <blueness@gentoo.org> at-spi2-atk-2.4.0.ebuild:
+  keyword ~ppc ~ppc64, bug #441692
 
 *at-spi2-atk-2.6.1 (28 Oct 2012)
 
