--- a/net-libs/courier-authlib/ChangeLog
+++ b/net-libs/courier-authlib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/courier-authlib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.124 2012/11/02 14:01:00 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.125 2012/11/12 13:30:35 jer Exp $
+
+  12 Nov 2012; Jeroen Roovers <jer@gentoo.org> courier-authlib-0.64.0.ebuild:
+  Stable for HPPA (bug #439736).
 
 *courier-authlib-0.65.0-r2 (02 Nov 2012)
 
