--- a/sci-libs/umfpack/ChangeLog
+++ b/sci-libs/umfpack/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/umfpack
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.35 2012/11/12 13:59:57 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.36 2012/11/12 15:51:44 bicatali Exp $
+
+  12 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
+  umfpack-5.6.1.ebuild:
+  Force depend on cholmod-2 (really fixing bug #442866)
 
   12 Nov 2012; Justin Lecher <jlec@gentoo.org> umfpack-5.6.1.ebuild:
   Add missing dep on sci-libs/suitesparseconfig, #442842
