--- a/dev-db/mysql/ChangeLog
+++ b/dev-db/mysql/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mysql
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.621 2012/11/12 18:21:04 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.622 2012/11/12 19:16:36 jer Exp $
+
+  12 Nov 2012; Jeroen Roovers <jer@gentoo.org> mysql-5.1.66.ebuild:
+  Stable for HPPA (bug #417989).
 
   13 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> mysql-5.1.66.ebuild:
   x86 stable, see bug 417989
