--- a/www-client/opera/ChangeLog
+++ b/www-client/opera/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.762 2012/11/09 17:29:58 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.763 2012/11/12 21:01:50 nativemad Exp $
+
+  13 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> opera-12.10.1652.ebuild:
+  x86 stable, see bug 442044
 
   09 Nov 2012; Jeroen Roovers <jer@gentoo.org> opera-12.10.1652.ebuild,
   opera-12.11.1653.ebuild, opera-12.11.1655.ebuild:
