--- a/dev-games/ogre/ChangeLog
+++ b/dev-games/ogre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/ogre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/ogre/ChangeLog,v 1.87 2012/11/01 19:34:35 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/ogre/ChangeLog,v 1.88 2012/11/12 23:26:40 hasufell Exp $
+
+  12 Nov 2012; Julian Ospald <hasufell@gentoo.org> ogre-1.8.1.ebuild:
+  fix bug 363719
 
   01 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml:
   metadata cleanup
