--- a/x11-libs/fltk/ChangeLog
+++ b/x11-libs/fltk/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/fltk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.222 2012/10/02 23:16:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.223 2012/11/13 01:43:10 jer Exp $
+
+*fltk-1.3.1 (13 Nov 2012)
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> +fltk-1.3.1.ebuild,
+  +files/fltk-1.3.1-as-needed.patch, +files/fltk-1.3.1-desktop.patch:
+  Version bump.
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> -fltk-1.3.0.ebuild:
   Old.
