--- a/x11-libs/fltk/ChangeLog
+++ b/x11-libs/fltk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/fltk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.223 2012/11/13 01:43:10 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.224 2012/11/13 02:01:12 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> fltk-1.3.1.ebuild:
+  Remove ewarn messages.
 
 *fltk-1.3.1 (13 Nov 2012)
 
