--- a/dev-ruby/mocha/ChangeLog
+++ b/dev-ruby/mocha/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/mocha
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mocha/ChangeLog,v 1.73 2012/11/07 03:36:11 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mocha/ChangeLog,v 1.74 2012/11/13 07:20:09 graaff Exp $
+
+*mocha-0.13.0 (13 Nov 2012)
+
+  13 Nov 2012; Hans de Graaff <graaff@gentoo.org> +mocha-0.13.0.ebuild:
+  Version bump.
 
   07 Nov 2012; Jeroen Roovers <jer@gentoo.org> mocha-0.10.5.ebuild:
   Stable for HPPA (bug #427606).
