--- a/dev-ruby/mocha/ChangeLog
+++ b/dev-ruby/mocha/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/mocha
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mocha/ChangeLog,v 1.74 2012/11/13 07:20:09 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mocha/ChangeLog,v 1.75 2012/11/13 07:23:23 graaff Exp $
+
+  13 Nov 2012; Hans de Graaff <graaff@gentoo.org> -mocha-0.9.12.ebuild,
+  -mocha-0.12.3.ebuild:
+  Cleanup.
 
 *mocha-0.13.0 (13 Nov 2012)
 
