--- a/dev-python/sqlite3dbm/ChangeLog
+++ b/dev-python/sqlite3dbm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sqlite3dbm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlite3dbm/ChangeLog,v 1.5 2012/11/13 10:25:39 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlite3dbm/ChangeLog,v 1.6 2012/11/13 10:48:02 idella4 Exp $
+
+  14 Nov 2012; Ian Delaney <idella4@gentoo.org> metadata.xml:
+  Updating maintainer, metadata.xml
 
   14 Nov 2012; Ian Delaney <idella4@gentoo.org> metadata.xml:
   Updating maintainer, metadata.xml
