--- a/net-misc/asterisk/ChangeLog
+++ b/net-misc/asterisk/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/asterisk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.420 2012/11/13 13:58:42 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.421 2012/11/13 14:44:48 chainsaw Exp $
+
+*asterisk-10.10.0 (13 Nov 2012)
+
+  13 Nov 2012; Tony Vroon <chainsaw@gentoo.org> +asterisk-10.10.0.ebuild:
+  Patch by Jaco Kroon adds subscribe context to SipShowPeers AMI command,
+  closes bug #440250. Please consider upgrading from 10 to 11 at this point. If
+  anything is keeping you on 10, I need to know and you should file me a bug.
 
 *asterisk-1.8.18.0 (13 Nov 2012)
 
