--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,9 +1,9 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.233 2012/11/13 16:30:47 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.234 2012/11/13 16:34:07 jer Exp $
 
   04 Nov 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-1.0.0.ebuild:
-  Fix need firewalld in init script when USE=-firewalld
+  Fix need firewalld in init script when USE=-firewalld (bug #441690)
 
 *libvirt-1.0.0 (04 Nov 2012)
 
