--- a/www-client/opera/ChangeLog
+++ b/www-client/opera/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.764 2012/11/12 21:03:22 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.765 2012/11/13 16:40:26 jer Exp $
+
+*opera-12.11.1657 (13 Nov 2012)
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.11.1653.ebuild,
+  +opera-12.11.1657.ebuild:
+  http://my.opera.com/desktopteam/blog/2012/11/13/imperialentanglement
 
   12 Nov 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.02.1578.ebuild:
   Old.
