--- a/net-libs/libnfnetlink/ChangeLog
+++ b/net-libs/libnfnetlink/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnfnetlink
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.51 2012/10/08 22:56:40 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.52 2012/11/13 16:44:52 ranger Exp $
+
+  13 Nov 2012; Brent Baude <ranger@gentoo.org> libnfnetlink-1.0.1.ebuild:
+  Marking libnfnetlink-1.0.1 ppc64 for bug 442872
 
   08 Oct 2012; Tim Harder <radhermit@gentoo.org> -libnfnetlink-1.0.0.ebuild:
   Remove old.
