--- a/www-client/opera-next/ChangeLog
+++ b/www-client/opera-next/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.149 2012/11/12 13:47:27 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.150 2012/11/13 16:48:06 jer Exp $
+
+*opera-next-12.11.1657 (13 Nov 2012)
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.11.1657.ebuild:
+  http://my.opera.com/desktopteam/blog/2012/11/13/imperialentanglement
 
 *opera-next-12.11.1655 (12 Nov 2012)
 
