--- a/media-libs/libmtp/ChangeLog
+++ b/media-libs/libmtp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libmtp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmtp/ChangeLog,v 1.117 2012/09/20 11:52:27 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmtp/ChangeLog,v 1.118 2012/11/13 16:50:49 ranger Exp $
+
+  13 Nov 2012; Brent Baude <ranger@gentoo.org> libmtp-1.1.5.ebuild:
+  Marking libmtp-1.1.5 ppc64 for bug 441374
 
   20 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> -libmtp-1.1.1.ebuild,
   -libmtp-1.1.3.ebuild:
