--- a/www-client/opera-next/ChangeLog
+++ b/www-client/opera-next/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.150 2012/11/13 16:48:06 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.151 2012/11/13 16:50:13 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> opera-next-12.10.1652.ebuild,
+  opera-next-12.11.1655.ebuild, opera-next-12.11.1657.ebuild,
+  opera-next-12.50.1583.ebuild:
+  Explain version/build slightly better.
 
 *opera-next-12.11.1657 (13 Nov 2012)
 
