--- a/media-gfx/povray/ChangeLog
+++ b/media-gfx/povray/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/povray
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.131 2012/11/10 21:42:00 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.132 2012/11/13 17:03:40 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> povray-3.7.0_rc5-r1.ebuild:
+  Marked ~hppa (bug #442472).
 
   10 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org>
   files/povray-3.7.0_rc5-automagic.patch, povray-3.7.0_rc5-r1.ebuild:
