--- a/sci-libs/umfpack/ChangeLog
+++ b/sci-libs/umfpack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/umfpack
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.36 2012/11/12 15:51:44 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.37 2012/11/13 17:06:49 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> umfpack-5.6.1.ebuild:
+  Marked ~hppa (bug #442862).
 
   12 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
   umfpack-5.6.1.ebuild:
