--- a/media-libs/libmtp/ChangeLog
+++ b/media-libs/libmtp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libmtp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmtp/ChangeLog,v 1.118 2012/11/13 16:50:49 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmtp/ChangeLog,v 1.119 2012/11/13 17:26:25 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> libmtp-1.1.5.ebuild:
+  Stable for HPPA (bug #441374).
 
   13 Nov 2012; Brent Baude <ranger@gentoo.org> libmtp-1.1.5.ebuild:
   Marking libmtp-1.1.5 ppc64 for bug 441374
