--- a/kde-base/libkdegames/ChangeLog
+++ b/kde-base/libkdegames/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkdegames
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkdegames/ChangeLog,v 1.228 2012/11/08 23:26:49 creffett Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkdegames/ChangeLog,v 1.229 2012/11/13 17:50:19 kensington Exp $
+
+  13 Nov 2012; Michael Palimaka <kensington@gentoo.org>
+  libkdegames-4.9.3.ebuild:
+  Drop unused dependency.
 
 *libkdegames-4.9.3 (08 Nov 2012)
 
