--- a/kde-base/knavalbattle/ChangeLog
+++ b/kde-base/knavalbattle/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/knavalbattle
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/knavalbattle/ChangeLog,v 1.2 2012/11/08 23:26:59 creffett Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/knavalbattle/ChangeLog,v 1.3 2012/11/13 18:05:39 kensington Exp $
+
+  13 Nov 2012; Michael Palimaka <kensington@gentoo.org>
+  knavalbattle-4.9.3.ebuild:
+  GGZ support has been removed upstream.
 
 *knavalbattle-4.9.3 (08 Nov 2012)
 
@@ -11,4 +15,3 @@
 
   02 Oct 2012; Johannes Huber <johu@gentoo.org> +knavalbattle-4.9.2.ebuild:
   Version bump KDE SC 4.9.2
-
