--- a/x11-libs/libfm/ChangeLog
+++ b/x11-libs/libfm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libfm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.79 2012/11/02 17:29:24 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.80 2012/11/13 19:14:58 hwoarang Exp $
+
+  13 Nov 2012; Markos Chandras <hwoarang@gentoo.org> libfm-1.0.2.ebuild,
+  libfm-1.1.0.ebuild, libfm-9999.ebuild:
+  Replace link if it exists
 
 *libfm-1.1.0 (02 Nov 2012)
 
