--- a/app-emulation/free42/ChangeLog
+++ b/app-emulation/free42/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/free42
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/free42/ChangeLog,v 1.8 2012/11/13 22:11:27 nimiux Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/free42/ChangeLog,v 1.9 2012/11/13 22:16:36 nimiux Exp $
+
+  13 Nov 2012; Chema Alonso <nimiux@gentoo.org> free42-1.4.75.ebuild:
+  Fix bug #442908. Thanks to James Cloos for reporting and providing patch.
 
   13 Nov 2012; Chema Alonso <nimiux@gentoo.org> free42-1.4.75.ebuild,
   files/free42-1.4.75-fix-alsa.patch:
