--- a/dev-ruby/method_source/ChangeLog
+++ b/dev-ruby/method_source/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/method_source
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/method_source/ChangeLog,v 1.13 2012/08/26 11:47:18 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/method_source/ChangeLog,v 1.14 2012/11/14 07:00:08 graaff Exp $
+
+  14 Nov 2012; Hans de Graaff <graaff@gentoo.org> +method_source-0.6.7.ebuild:
+  Add back 0.6.7 in a separate slot to satisfy dev-ruby/pry dependency.
 
   26 Aug 2012; Hans de Graaff <graaff@gentoo.org>
   -method_source-0.7.1-r1.ebuild:
