--- a/dev-ruby/method_source/ChangeLog
+++ b/dev-ruby/method_source/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/method_source
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/method_source/ChangeLog,v 1.14 2012/11/14 07:00:08 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/method_source/ChangeLog,v 1.15 2012/11/14 07:13:28 graaff Exp $
+
+  14 Nov 2012; Hans de Graaff <graaff@gentoo.org> -method_source-0.6.7.ebuild:
+  Remove this version again since the compatibility issues where elsewhere.
 
   14 Nov 2012; Hans de Graaff <graaff@gentoo.org> +method_source-0.6.7.ebuild:
   Add back 0.6.7 in a separate slot to satisfy dev-ruby/pry dependency.
