--- a/dev-python/python-ldap/ChangeLog
+++ b/dev-python/python-ldap/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/python-ldap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-ldap/ChangeLog,v 1.116 2012/11/14 07:39:44 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-ldap/ChangeLog,v 1.117 2012/11/14 08:17:33 xarthisius Exp $
+
+  14 Nov 2012; Kacper Kowalik <xarthisius@gentoo.org> python-ldap-2.3.13.ebuild,
+  python-ldap-2.3.9.ebuild, python-ldap-2.4.10.ebuild, python-ldap-2.4.3.ebuild,
+  python-ldap-2.4.9.ebuild:
+  Restore pypi link in HOMEPAGE
 
   14 Nov 2012; Ian Delaney <idella4@gentoo.org> python-ldap-2.3.13.ebuild,
   python-ldap-2.3.9.ebuild, python-ldap-2.4.3.ebuild, python-ldap-2.4.9.ebuild:
