--- a/sys-apps/pcsc-lite/ChangeLog
+++ b/sys-apps/pcsc-lite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pcsc-lite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.144 2012/11/14 10:20:44 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.145 2012/11/14 11:18:13 blueness Exp $
+
+  14 Nov 2012; Anthony G. Basile <blueness@gentoo.org> pcsc-lite-1.8.6.ebuild:
+  stable arm, bug #442432
 
   14 Nov 2012; Anthony G. Basile <blueness@gentoo.org> pcsc-lite-1.8.6.ebuild:
   stable ppc, bug #442432
