--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.722 2012/11/08 15:15:48 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.723 2012/11/14 11:35:33 blueness Exp $
+
+*hardened-sources-2.6.32-r139 (14 Nov 2012)
+
+  14 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-2.6.32-r139.ebuild:
+  vanilla-2.6.32.60 + genpatches-2.6.32-48 +
+  grsecurity-2.9.1-2.6.32.60-201211122212
 
   08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   -hardened-sources-2.6.32-r131.ebuild, -hardened-sources-2.6.32-r132.ebuild,
