--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.723 2012/11/14 11:35:33 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.724 2012/11/14 11:38:07 blueness Exp $
+
+*hardened-sources-3.2.33-r2 (14 Nov 2012)
+
+  14 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.2.33-r2.ebuild:
+  vanilla-3.2.33 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.33-201211122213,
+  adds user namespace xttars on tmpfs, bug #432434
 
 *hardened-sources-2.6.32-r139 (14 Nov 2012)
 
