--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.724 2012/11/14 11:38:07 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.725 2012/11/14 11:39:41 blueness Exp $
+
+*hardened-sources-3.6.6-r1 (14 Nov 2012)
+
+  14 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.6.6-r1.ebuild:
+  vanilla-3.6.6 + genpatches-3.6-8 + grsecurity-2.9.1-3.6.6-201211122213, adds
+  user namespace xttars on tmpfs, bug #432434
 
 *hardened-sources-3.2.33-r2 (14 Nov 2012)
 
