--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7137 2012/11/14 12:50:15 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7138 2012/11/14 13:45:12 ford_prefect Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  14 Nov 2012; Arun Raghavan <ford_prefect@gentoo.org>
+  default/linux/package.use.mask:
+  Mask systemd USE flag on media-sound/pulseaudio since systemd isn't in stable
+  yet,
 
   14 Nov 2012; <naota@gentoo.org> package.mask:
   Unmask dropbox. Seems working.
